--- a/public/scss/_mixin.scss
+++ b/public/scss/_mixin.scss
@@ -13,6 +13,17 @@
   }
 }
 
+@mixin heading4($color: $primary-white) {
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 42px;
+  letter-spacing: 0.25px;
+
+  color: $color;
+}
+
 @mixin heading5($color: $primary-white) {
   font-family: "Rubik", sans-serif;
   font-style: normal;
@@ -20,6 +31,17 @@
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0px;
+
+  color: $color;
+}
+
+@mixin subtitle1($color: $primary-white) {
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.15px;
 
   color: $color;
 }
