--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -3,6 +3,26 @@
 @import "mixin";
 @import "component";
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $light-blue;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $primary-tosca;
+}
+
 body {
   background-color: $primary-blue;
   color: $primary-white;
@@ -45,6 +65,8 @@ body {
 #menu {
   min-height: 100vh;
   position: sticky;
+  top: 0;
+  padding: 24px 0;
   display: flex;
   align-items: center;
   @media screen and (max-width: 992px) {
@@ -52,7 +74,7 @@ body {
     margin: 24px auto;
   }
   .menu {
-    padding: 48px 24px;
+    padding: 32px 24px;
     @media screen and (max-width: 992px) {
       padding: 24px 16px;
     }
@@ -75,7 +97,7 @@ body {
 
 #content {
   min-height: 100vh;
-  position: sticky;
+  padding: 20px 0;
   display: flex;
   align-items: center;
   @media screen and (max-width: 992px) {
@@ -90,7 +112,7 @@ body {
     padding: 32px 16px 24px;
   }
   &-title {
-    @include heading2($light-blue);
+    @include heading2($primary-tosca);
   }
   &-desc {
     @include body1($light-blue);
@@ -104,5 +126,24 @@ body {
   }
   &-button {
     @include body1();
+  }
+}
+
+.about {
+  padding: 32px 48px;
+  &-section {
+    @include subtitle1($light-blue);
+  }
+  &-title {
+    @include heading4($primary-tosca);
+  }
+  &-jobs {
+    @include body2($light-blue);
+  }
+  &-content {
+    @include body1($light-blue);
+    .content-highlight {
+      color: $primary-white;
+    }
   }
 }
